# almox_fs

./: README.MD
backend/: .env  .gitignore  Dockerfile  README.MD  docker-compose.yml  main.py  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py
backend/app/core/: config.py  database.py
backend/app/models/: user.py
backend/app/schemas/: user.py
backend/app/services/: user_service.py
backend/app/utils/: enums.py
backend/core/: config.py  database.py  security.py
backend/models/: __init__.py  category.py  material.py  movement.py  stock.py  user.py
backend/routes/: auth.py  categories.py  main.py  material.py  movement.py  stock.py  users.py
backend/schemas/: category.py  material.py  movement.py  stock.py  user.py
backend/scripts/: create_admin.py  create_migrations.py
backend/services/: category.py  login.py  material.py  movement.py  stock.py  user.py
backend/utils/: enums.py
frontend/: package-lock.json  package.json
